--- a/Functions_.ipynb
+++ b/Functions_.ipynb
@@ -39,6 +39,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Transforming exe to machine code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image                Folder exists: [yes] [        0 files conteneted]\n",
+      "Sample               Folder exists: [yes] [        7 files conteneted]\n",
+      "Asm_r2               Folder exists: [yes] [        0 files conteneted]\n",
+      "Asm_objdump          Folder exists: [yes] [        0 files conteneted]\n",
+      "Library              Folder exists: [yes] [        0 files conteneted]\n",
+      "Section_Attributions Folder exists: [yes] [        0 files conteneted]\n",
+      "CSV                  Folder exists: [yes] [        0 files conteneted]\n",
+      "NPZ                  Folder exists: [yes] [        0 files conteneted]\n",
+      "JOBLIB               Folder exists: [yes] [        0 files conteneted]\n",
+      "TXT                  Folder exists: [yes] [        0 files conteneted]\n",
+      "Reports              Folder exists: [yes] [        0 files conteneted]\n",
+      "D:\\Github_Desktop\\Ransomeware_test\\Ransomeware_test\\Dataset\\Sample\\Directory_Exploration.exe\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "ERROR: Cannot find radare2 in PATH",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\nick5\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\r2pipe\\open_sync.py:68\u001b[0m, in \u001b[0;36mopen.__init__\u001b[1;34m(self, filename, flags, radare2home)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 68\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess \u001b[39m=\u001b[39m Popen(\n\u001b[0;32m     69\u001b[0m         cmd, shell\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, stdin\u001b[39m=\u001b[39;49mPIPE, stdout\u001b[39m=\u001b[39;49mPIPE, bufsize\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m\n\u001b[0;32m     70\u001b[0m     )\n\u001b[0;32m     71\u001b[0m \u001b[39mexcept\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\nick5\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\subprocess.py:1026\u001b[0m, in \u001b[0;36mPopen.__init__\u001b[1;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask, pipesize, process_group)\u001b[0m\n\u001b[0;32m   1023\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39mTextIOWrapper(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr,\n\u001b[0;32m   1024\u001b[0m                     encoding\u001b[39m=\u001b[39mencoding, errors\u001b[39m=\u001b[39merrors)\n\u001b[1;32m-> 1026\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0;32m   1027\u001b[0m                         pass_fds, cwd, env,\n\u001b[0;32m   1028\u001b[0m                         startupinfo, creationflags, shell,\n\u001b[0;32m   1029\u001b[0m                         p2cread, p2cwrite,\n\u001b[0;32m   1030\u001b[0m                         c2pread, c2pwrite,\n\u001b[0;32m   1031\u001b[0m                         errread, errwrite,\n\u001b[0;32m   1032\u001b[0m                         restore_signals,\n\u001b[0;32m   1033\u001b[0m                         gid, gids, uid, umask,\n\u001b[0;32m   1034\u001b[0m                         start_new_session, process_group)\n\u001b[0;32m   1035\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m   1036\u001b[0m     \u001b[39m# Cleanup if the child failed starting.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\nick5\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\subprocess.py:1538\u001b[0m, in \u001b[0;36mPopen._execute_child\u001b[1;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, unused_restore_signals, unused_gid, unused_gids, unused_uid, unused_umask, unused_start_new_session, unused_process_group)\u001b[0m\n\u001b[0;32m   1537\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 1538\u001b[0m     hp, ht, pid, tid \u001b[39m=\u001b[39m _winapi\u001b[39m.\u001b[39mCreateProcess(executable, args,\n\u001b[0;32m   1539\u001b[0m                              \u001b[39m# no special security\u001b[39;00m\n\u001b[0;32m   1540\u001b[0m                              \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   1541\u001b[0m                              \u001b[39mint\u001b[39m(\u001b[39mnot\u001b[39;00m close_fds),\n\u001b[0;32m   1542\u001b[0m                              creationflags,\n\u001b[0;32m   1543\u001b[0m                              env,\n\u001b[0;32m   1544\u001b[0m                              cwd,\n\u001b[0;32m   1545\u001b[0m                              startupinfo)\n\u001b[0;32m   1546\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m   1547\u001b[0m     \u001b[39m# Child is launched. Close the parent's copy of those pipe\u001b[39;00m\n\u001b[0;32m   1548\u001b[0m     \u001b[39m# handles that only the child should have open.  You need\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1551\u001b[0m     \u001b[39m# pipe will not close when the child process exits and the\u001b[39;00m\n\u001b[0;32m   1552\u001b[0m     \u001b[39m# ReadFile will hang.\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] 系統找不到指定的檔案。",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Github_Desktop\\Ransomeware_test\\Ransomeware_test\\Functions_.ipynb Cell 5\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Github_Desktop/Ransomeware_test/Ransomeware_test/Functions_.ipynb#X50sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m filename \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mbasename(i)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Github_Desktop/Ransomeware_test/Ransomeware_test/Functions_.ipynb#X50sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mprint\u001b[39m(i)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Github_Desktop/Ransomeware_test/Ransomeware_test/Functions_.ipynb#X50sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m r \u001b[39m=\u001b[39m r2pipe\u001b[39m.\u001b[39;49mopen(\u001b[39mstr\u001b[39;49m(i))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Github_Desktop/Ransomeware_test/Ransomeware_test/Functions_.ipynb#X50sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m r\u001b[39m.\u001b[39mcmd(\u001b[39m'\u001b[39m\u001b[39me asm.bytes = true\u001b[39m\u001b[39m'\u001b[39m)     \u001b[39m# Set Create Bytes to True\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Github_Desktop/Ransomeware_test/Ransomeware_test/Functions_.ipynb#X50sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m r\u001b[39m.\u001b[39mcmd(\u001b[39m'\u001b[39m\u001b[39me asm.nbytes = 20\u001b[39m\u001b[39m'\u001b[39m)      \u001b[39m# Set Bytes Length\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\nick5\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\r2pipe\\open_sync.py:72\u001b[0m, in \u001b[0;36mopen.__init__\u001b[1;34m(self, filename, flags, radare2home)\u001b[0m\n\u001b[0;32m     68\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess \u001b[39m=\u001b[39m Popen(\n\u001b[0;32m     69\u001b[0m         cmd, shell\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, stdin\u001b[39m=\u001b[39mPIPE, stdout\u001b[39m=\u001b[39mPIPE, bufsize\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m\n\u001b[0;32m     70\u001b[0m     )\n\u001b[0;32m     71\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m---> 72\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mERROR: Cannot find radare2 in PATH\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     74\u001b[0m \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnt\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     75\u001b[0m     \u001b[39m# On windows-spawn method we need to read the null byte twice\u001b[39;00m\n\u001b[0;32m     76\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess\u001b[39m.\u001b[39mstdout\u001b[39m.\u001b[39mread(\u001b[39m1\u001b[39m)  \u001b[39m# Reads initial \\x00\u001b[39;00m\n",
+      "\u001b[1;31mException\u001b[0m: ERROR: Cannot find radare2 in PATH"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "from pathlib import Path\n",
+    "import r2pipe\n",
+    "\n",
+    "def SettingDirectory(dir: str):\n",
+    "    # 定位資料集以及專案位置\n",
+    "\n",
+    "    # Datasets Directory\n",
+    "    Datasets_dir = Path(dir)\n",
+    "\n",
+    "    # Create Directories\n",
+    "    List_Folder_Datasets = ['Image', 'Sample', 'Asm_r2', 'Asm_objdump', 'Library', 'Section_Attributions', 'CSV', 'NPZ', 'JOBLIB', 'TXT', 'Reports'] \n",
+    "\n",
+    "    for Folder in List_Folder_Datasets:\n",
+    "        if not Path(Datasets_dir).joinpath(Folder).exists():\n",
+    "            Path(Datasets_dir).joinpath(Folder).mkdir()\n",
+    "        else :\n",
+    "            num_files = len(os.listdir(Path(Datasets_dir).joinpath(Folder)))\n",
+    "        globals()[Folder + \"_dir\"] = Path(Datasets_dir).joinpath(Folder)\n",
+    "        print('%-20s'%Folder, \"Folder exists:\", '[%-3s]'%(\"yes\") if (Path(Datasets_dir).joinpath(Folder).exists()) else \"no\", \"[\", '%8s'%num_files, \"files conteneted]\")\n",
+    "\n",
+    "\n",
+    "    # File ID Lists\n",
+    "    # 創建檔案列表,紀錄檔案名稱\n",
+    "\n",
+    "    List_ids = list()\n",
+    "    List_files = list()\n",
+    "    Dict_id2file = dict()\n",
+    "    Dict_file2id = dict()\n",
+    "    \n",
+    "    for filelist in Path(Datasets_dir).joinpath(\"Sample\").glob(\"*\"):\n",
+    "        List_ids.append(filelist.name.split('.',)[0])\n",
+    "        List_files.append(filelist.name)\n",
+    "        Dict_file2id[filelist.name] = filelist.name.split('.',)[0]\n",
+    "        Dict_id2file[filelist.name.split('.',)[0]] = filelist.name\n",
+    "    return List_ids, List_files, Dict_file2id, Dict_id2file\n",
+    "\n",
+    "\n",
+    "# Main\n",
+    "home_path = \"D:\\\\Github_Desktop\\\\Ransomeware_test\\\\Ransomeware_test\\\\Dataset\"\n",
+    "Sample_dir = home_path + \"Samples\\\\\"\n",
+    "Asm_r2_dir = home_path + \"Asm_r2\\\\\"\n",
+    "List_ids, List_files, Dict_file2id, Dict_id2file = SettingDirectory(home_path)\n",
+    "\n",
+    "for i in Path(Sample_dir).glob(\"*?*\"):\n",
+    "    filename = os.path.basename(i)\n",
+    "    print(i)\n",
+    "    r = r2pipe.open(str(i))\n",
+    "    r.cmd('e asm.bytes = true')     # Set Create Bytes to True\n",
+    "    r.cmd('e asm.nbytes = 20')      # Set Bytes Length\n",
+    "    r.cmd('aaaa')\n",
+    "    r.cmd('iS')\n",
+    "    r.cmd('afl')\n",
+    "    assembly_code_section = r.cmd('afl').splitlines(True)\n",
+    "    \n",
+    "    with Path(Asm_r2_dir).joinpath(filename+'.asm').open( mode = \"w+\", newline = '', encoding = \"utf-8\") as file_write:\n",
+    "        for j in assembly_code_section:\n",
+    "            section_address = j.split(' ',2)[0]\n",
+    "            r.cmd(section_address)\n",
+    "            assembly_code = r.cmd('pdr')\n",
+    "            file_write.write(assembly_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Reconnaissance"
    ]
   },
